bug 20326 - set min-height for tabbrowser to avoid chopping of vertical scrollbar (r=DesignerSteve)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17838 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -370,6 +370,11 @@ tabpanels {
 }
 tabpanel {
 }
+/* prevent the content pane bottom display pane from being resized high enough
+ * that it breaks the tabbrowser vertical scrollbar */
+sb-tabbrowser {
+  min-height: 110px;
+}
 sb-tabbrowser > tabbox > tabpanels {
   padding: 0px !important;
   border: none !important;
